<resources>
    <string name="app_name">Tripalocal</string>
    <string name="facebook_app_id">595515750559076</string>
    <string name="server_url">https://www.tripalocal.com/</string>
    <string name="version_language">English</string>
    <string name="hello_world">Hello world!</string>
    <string name="blank_fragment">Hmmm.. You have not saved any experience yet!</string>
    <string name="placeholder_content">Loading</string>
    <string name="gibber"></string>
    <string name="sub_head_gibber">Loading</string>
    <string name="bullet">\u2022</string>
    <string name="slide_button">Start Now!</string>
    <string name="with">with</string>
    <string name="tags">Food&amp;wine,Education,History&amp;culture,Architecture,For couples,Photography worthy,Liveability research,Kids friendly,Outdoor&amp;nature,Shopping,Sports&amp;leisure,Host with car,Extreme fun,Events,Health&amp;beauty,Private group</string>
    <string name="action_login">Log In</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="logged_out">Logged Out</string>
    <string name="title_activity_exp_detail">Experience Detail</string>
    <string name="title_activity_exp_list_actvity2">Experience List</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_my_trip">My Trip</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_review">Reviews</string>
    <string name="title_activity_alipay">Alipay</string>
    <string name="search_hint">Where are you going?</string>
    <string name="search_title">Where are you going?</string>
    <string name="experience_image">Experience Image</string>
    <string name="my_trip_upcoming">Upcoming</string>
    <string name="my_trip_previous">Previous</string>
    <string name="my_trip_call">Call</string>
    <string name="my_trip_message">SMS</string>
    <string name="my_trip_meetup_title">Meet up instruction</string>
    <string name="my_trip_myTrip">My Trip</string>
    <string name="my_trip_hint">When you book an experience, you\n will see your itinerary here.</string>
    <string name="my_trip_explore">Start Exploring</string>
    <string name="mytrip_date_format">dd-MM-yyyy</string>
    <string name="mytrip_date_today">Today</string>
    <string name="mytrip_status_confirmed">Confirmed</string>
    <string name="mytrip_status_requested">Requested</string>
    <string name="mytrip_status_cancelled">Cancelled</string>
    <string name="nav_item1">nav item1</string>
    <string name="navigation_item_2">Home</string>
    <string name="navigation_subheader">Subheader</string>
    <string name="nav_item_2">Home</string>
    <string name="nav_profile_title">profile title</string>
    <string name="nav_profile_image">nav profile image</string>
    <string name="nav_my_account">My Account</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_mytrips">My Trip</string>
    <string name="navigation_wishlist">Wishlist</string>
    <string name="navigation_messages">Messages</string>
    <string name="navigation_myprofile">My Profile</string>
    <string name="nav_terms_of_service_link">Terms of Service</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_host_exp">Travel with Locals</string>
    <string name="nav_local_exp">Local Experiences</string>
    <string name="nav_itineraries">Itineraries</string>
    <string name="exp_list_per_person">AUD/person</string>
    <string name="exp_list_duration">hrs</string>
    <string name="exp_reservation">Reservation with </string>
    <string name="exp_reservation_cn"></string>
    <string name="exp_detail_food">Food:\u0020</string>
    <string name="exp_detail_tickets">Tickets:\u0020</string>
    <string name="exp_detail_transport">Transport:\u0020</string>
    <string name="exp_detail_tips">Tips:\u0020</string>
    <string name="exp_detail_pickup">Pickup Details:\u0020</string>
    <string name="exp_detail_included">What is included:\u0020</string>
    <string name="exp_detail_add_expenses_label">Additional Expenses</string>
    <string name="exp_detail_default_optional_expenses">Not included</string>
    <string name="view_more">Read More</string>
    <string name="view_less">Less</string>
    <string name="no_review_content">No review</string>
    <string name="exp_detail_reviews">\u0020Reviews</string>
    <string name="exp_detail_about_the_host">About the host,\u0020</string>
    <string name="exp_detail_per_person_text">per person </string>
    <string name="exp_detail_per_person_for">for </string>
    <string name="exp_detail_per_person_hour">hour(s)</string>
    <string name="exp_detail_request">Request to Book</string>
    <string name="from">from </string>
    <string name="dollar_placeholder">$</string>
    <string name="loading_title">Loading title</string>
    <string name="checkout_title_placeholder"></string>
    <string name="exp_detail_view_all">View  All</string>
    <string name="exp_detail_log_in_msg">Please log in or sign up first</string>
    <string name="home_bg_city_content_desc">background_image_city</string>
    <string name="login_or">or</string>
    <string name="login_email">Email address</string>
    <string name="login_password">Password</string>
    <string name="login_forget_password">Forgot password?</string>
    <string name="login_login">Log In</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_signup">Sign Up</string>
    <string name="signup_first_name">First name</string>
    <string name="signup_last_name">Last name</string>
    <string name="signup_term">By signing up, I agree to tripalocal\'s Terms of service, Privacy policy and Refund policy</string>
    <string name="signup_has_account">Already with us?</string>
    <string name="myprofile_placeholder_host_name"></string>
    <string name="myprofile_how_to_contact">How can hosts contact you?</string>
    <string name="myprofile_local_number">Local Mobile Number</string>
    <string name="myprofile_roaming_number">Roaming Mobile Number</string>
    <string name="myprofile_number_explanation">This will be included in all booking requests and confirmations for hosts to see</string>
    <string name="checkout_date_placeholder">dd/mm/yy</string>
    <string name="checkout_time_placeholder">hh:mm</string>
    <string name="checkout_select_date_label">Select Date</string>
    <string name="checkout_select_time_label">Select Time</string>
    <string name="checkout_guests_label">Guests</string>
    <string name="checkout_price_label">Price</string>
    <string name="checkout_price_placeholder">$0 AUD x 0 pp</string>
    <string name="checkout_price_dollar_text">\u0020AUD x\u0020</string>
    <string name="checkout_price_pp">\u0020pp</string>
    <string name="checkout_amount_placeholder">$ 0 AUD</string>
    <string name="checkout_coupon_label">code</string>
    <string name="checkout_content_desc_pay_ok">pay_ok_to_change_image</string>
    <string name="checkout_ok_tochange_text">It\'s OK to change your mind</string>
    <string name="checkout_disclaim_1">If you cancel at least 7 calendar days in advance, there is no cancellation fee.</string>
    <string name="checkout_disclaim_2">If you cancel between 3 and 6 calendar days in advance, you will be charge a 50% cancellation fee.</string>
    <string name="checkout_disclaim_3">If you cancel within 2 calendar days in advance, you will be charged a 100% cancellation fee.</string>
    <string name="checkout_refund_text">You can also view our\u0020</string>
    <string name="checkout_refund_link">refund policy</string>
    <string name="checkout_proceed_to_payment">Proceed to Payment</string>
    <string name="checkout_date">Date</string>
    <string name="checkout_time">Time</string>
    <string name="checkout_date_content_desc">date_img</string>
    <string name="checkout_time_content_desc">time_img</string>
    <string name="checkout_english">English</string>
    <string name="checkout_duration_placeholder">hrs\u0020\u2022\u0020</string>
    <string name="checkout_refresh">Validate</string>
    <string name="checkout_invalidCoupon">Invalid coupon</string>
    <string name="checkout_valid_coupon">Coupon successfully applied</string>
    <string name="server_error">Server error</string>
    <string name="wishlist_title">My Wishlist</string>
    <string name="wish_log_in_msg">Please Log in to Save</string>
    <string name="save_to_wishlist">Save to wishlist</string>
    <string name="saved_to_wishlist">Saved to wishlist</string>
    <string name="wishlist_save">Save to wishlist</string>
    <string name="wishlist_saved">Saved to wishlist</string>
    <string name="wishlist_removed">Removed from wishlist</string>
    <string name="wishlist_error">Unable to save</string>
    <string name="toast_error">Error occurred</string>
    <string name="toast_showing_exp">Showing experience for\u0020</string>
    <string name="toast_showing_wishlist">Showing your wishlist</string>
    <string name="toast_search_submitted">Search submitted</string>
    <string name="toast_login_success">Login succeeded</string>
    <string name="toast_login_failure">Login failed</string>
    <string name="toast_fb_login_success">Facebook login succeeded</string>
    <string name="toast_fb_login_cancel">Facebook login cancelled</string>
    <string name="toast_fb_login_failure">Facebook login failed</string>
    <string name="toast_service_down">Service temporarily down</string>
    <string name="toast_profile_get_success">Profile retrieved</string>
    <string name="toast_profile_get_error">Error getting profile</string>
    <string name="toast_feature_coming">Feature coming soon ...</string>
    <string name="toast_signup_success">Successfully signed in</string>
    <string name="toast_signup_failure">Sign up failed</string>
    <string name="toast_searched_with">Searched with\u0020</string>
    <string name="toast_invalid_email">Invalid Email</string>
    <string name="toast_password_incorrect_format">Password must be 8-character long and contain at least one letter and one digit </string>
    <string name="toast_empty_field">You can not have empty fields</string>
    <string name="alipay">Alipay</string>
    <string name="add_alipay_account">Add new Alipay Account</string>
    <string name="credit_card">Credit Card</string>
    <string name="add_new_credit_card">Add New Credit Card</string>
    <string name="wechat">Wechat</string>
    <string name="add_wechat_account">Add Wechat Account</string>
    <string name="confirm_pay">Confirm And Pay</string>
    <string name="currency_conversion">Currency Conversion</string>
    <string name="number">Number</string>
    <string name="expire">Expire(mm/yy)</string>
    <string name="cvv">CVV</string>
    <string name="title_activity_creditcard">CreditCard Payment</string>
    <string name="credit_no_hint">16 digits No.</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_closed">drawer closed</string>
    <string name="view_in_my_trip">View it in MyTrip</string>
    <string name="payment_success_text">Your booking request has been sent to somebody</string>
    <string name="payment_success_title">Payment Successful</string>
    <string name="payment_success">Payment Successful</string>
    <string name="save_profile_btn">Save Profile</string>
    <string name="msg_list_no_1">You have not sent any message</string>
    <string name="msg_list_no_2">to any host yet</string>
    <string name="msg_list_no_3">You can send message to any</string>
    <string name="msg_list_no_4">host on their experience page</string>
</resources>