<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
   <!-- <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:icon="@drawable/instant_booking"
            android:title="@string/nav_item1"/>
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/home"
            android:title="@string/navigation_item_2"/>
    </group>-->

    <group>
        <item
            android:id="@+id/nav_profile_image"
            android:icon="@drawable/com_facebook_profile_picture_blank_square"
            android:title="@string/nav_profile_image"/>
        <item
            android:id="@+id/nav_profile_title"
            android:title="@string/nav_profile_title"/>
    </group>

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/navigation_subheader">
        <menu>
            <item
                android:id="@+id/navigation_sub_item_1"
                android:icon="@drawable/instant_booking"
                android:title="@string/nav_item1"/>
            <item
                android:id="@+id/navigation_sub_item_2"
                android:icon="@drawable/home"
                android:title="@string/nav_item_2"/>
        </menu>
    </item>
    </group>
</menu>