<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/booking_super_container">

    <ScrollView
        android:id="@+id/scroll"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:fontFamily="light"
            tools:context="com.tripalocal.bentuke.Views.ExperienceDetail">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/exp_detail_top_part">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/exp_detail_price_container"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:layout_below="@id/exp_reservation_with"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginTop="20dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/exp_detail_price_hour"
                        android:textSize="26sp"
                        android:text="@string/payment_success"
                        android:layout_marginLeft="3dp"
                        android:layout_toRightOf="@id/exp_detail_price_person"
                        android:layout_marginBottom="30dp" />
                </RelativeLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/host_img"
                    android:layout_width="149dp"
                    android:layout_height="95dp"
                    android:layout_gravity="center"
                    android:src="@drawable/profile_default"
                    app:border_width="2dp"
                    app:border_color="#ffffffff"
                    android:layout_marginBottom="60dp"
                    android:layout_marginTop="60dp" />

            </FrameLayout>

            <!-- info on the experience-->

            <!-- about the host-->
            <!-- reviews-->
            <!--end of reviews -->
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/view_trip_btn"
        android:text="@string/view_in_my_trip"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/booking_btn_shape"
        android:textColor="@color/white"
        android:layout_marginBottom="89dp"
        android:layout_alignBottom="@+id/scroll"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/payment_success_text"
        android:id="@+id/payment_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_above="@+id/view_trip_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        />

</RelativeLayout>